yoshimi 1.5.4 M

2017-10-24 Will
* Revised parameters for direct midi controls.
* Virtual keyboad now uses these, so threadsafe.
* Updated control numbers.

2017-10-23 Will
* GUI improvements to mixer panel.
* Direct access to NoteOn, NoteOff, SetController.
* Updated dev_notes/Yoshimi Control Numbers.ods

2017-10-22 Will
* Improved GUI behaviour on part changes.
* More doc updates.

2017-10-21 Will
* Minor adjustments to musl patch from newbluemoon.
* Further code cleanups.
* Doc updates.

2017-10-20 Will
* Doc updates.
* Added missing limits.h include to MiscFuncs.

2017-10-16 Will
* Finalised and cleaned up bugfix code.
* Rationalised GUI updates (only one Fl::check() call).
* set as V 1.5.4.1 release.

2017-10-14 Will
* Bugfix: Main part controls were responding to all
  remote input channels but upper panel rows weren't.
* set as V 1.5.4.1 rc2

2017-10-13 Will
* BugFix: Instrument loading now synchronised.
* CLI enable/disable now updates panel.
* set as V 1.5.4.1 rc1

2017-9-27 Will
* Merged in noboost branch. So no dependency on boost.
  Resolves a long standing very rare segfault.
* A few more tidy ups.
* Included "Yoshimi Advanced User Manual" as a PDF.
  Can be launched from the 'Yoshimi' dropdown menu.
* Set Version 1.5.4 release.

2017-9-24 Will
* Removed orphaned and disabled code.
* Unified coding style
* set as V 1.5.4 rc1

2017-9-23 Will
* Improved part change display behaviour.
* CLI part enable state can now be read as well.
* Changing part enable state updates all of part
  section in main window.

2017-9-22 Will
* Updated cmake policies.

2017-9-21 Will
* BugFix: MusicIO was passing LV2 MIDI to ring buffer.
* Improved example build instructions.

2017-9-19 Will
* Further CLI conversions and code cleanups.

2017-9-17 Will
* Mute now uses the same structure as partonoff.
  Only a few mutex locks left!
* Paste no longer locks, but audio loop lock needed.

2017-9-16 Will
* Removed redundant mutex from OscilGenUI.
* Added check for old config file.