@@ -1,5 +1,11 @@
 yoshimi 1.5.4 M
 
+2017-10-26 Will
+* Corrected GUI panel anomally when changing parts.
+* Started implimenting unified root/bank/program change.
+* Applied mutex lock corrections suggested by 'blubee'.
+* Corrected implied cast in jackengine.
+
 2017-10-24 Will
 * Revised parameters for direct midi controls.
 * Virtual keyboad now uses these, so threadsafe.
